GNOME Bugzilla – Bug 656502
type information for GSettings::backend missing from .gir
Last modified: 2017-09-11 20:29:39 UTC
<property name="backend" introspectable="0" writable="1" construct-only="1" transfer-ownership="none"> <type/> </property> Which prevents us generating documentation for its C API from the .gir.
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]
That should probably be "* GSettings:backend:" instead of "* GSettings:context:" here: https://git.gnome.org/browse/glib/tree/gio/gsettings.c?id=74c22150cf4c2f8a9c7d7fae058a7fd589a94a27#n765
The following fix has been pushed: 1275b94 gsettings: Fix copy-paste error in property documentation
Created attachment 359556 [details] [review] gsettings: Fix copy-paste error in property documentation This should fix the introspection binding for that property too. Signed-off-by: Philip Withnall <withnall@endlessm.com>